# ic-kitties

./: my-notes.md
pallets/kitties/: Cargo.toml
pallets/kitties/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: pallet_kitties.rs
